# live-image-processing

./: .gitignore  README.md  README_LAYOUT_SCRIPTS.md  claude_patcher_gem.py  gem_patcher.py  generate_layout_images.sh  main.py  pyproject.toml  run_layout_commands.sh  unified_patcher.py
examples/: bboxes.json
src/image_analysis/: __init__.py  box_merger.py  cluster.py  clustering_manager.py  color.py  color_2.py  color_cluster.py  color_clustering_manager.py  color_example_usage.py  color_interactive.py  detector.py  example_usage.py  interactive.py  models.py  segmenter.py  serializer.py
src/image_analysis.egg-info/: PKG-INFO
src/image_analysis/config/: __init__.py  segmenter_config.yaml
